--- a/16-22712771-LeQuochung/BTHTCNWeb/bai2t3/style.css
+++ b/16-22712771-LeQuochung/BTHTCNWeb/bai2t3/style.css
@@ -1,29 +1,28 @@
-* {
-    padding: 0px;
+*{
     margin: 0px auto;
+    padding: 0px;
 }
 
 .container {
     width: 1050px;
-    height: 600px;
     border: 1px solid black;
+    height: 650px;
 
 }
 
-header {
-    position: relative;
-    background-color: #294e79;
-    height: 150px;
-    width: 1050px;
-}
+.header{
+        position: relative;
+        background-color: #294e79;
+        height: 150px;
+        width: 1050px;
 
-header img {
+}
+.header img {
     position: absolute;
     top: 20px;
     left: 10px;
 }
-
-header h2 {
+.header h2 {
     position: absolute;
     top: 40px;
     left: 100px;
@@ -31,7 +30,7 @@ header h2 {
     color: aliceblue;
 }
 
-header h4 {
+.header h4 {
     position: absolute;
     top: 70px;
     left: 100px;
@@ -47,13 +46,13 @@ header h4 {
 
 .frm #ip1 {
     background-color: rgb(29, 37, 77);
-    height: 20px;
+    height: 24px;
     
 }
 
 .frm #ip2 {
     background-color: rgb(29, 37, 77);
-    height: 24px;
+    height: 25px;
     width: 30px;
 }
 
@@ -71,6 +70,7 @@ nav {
     padding-left: 10px;
     padding-right: 10px;
     margin-left: 10px;
+    margin-top: 10px;
 }
 
 .menu li a {
@@ -96,77 +96,41 @@ nav {
 
 .menu li:hover ul li {
     display: block;
-    width: 114px;
-    margin-right: -25px;
+    width: 146px;
+    margin-right: -23px;
     
 }
 
 .menu li:hover ul li a {
     display: block;
 }
-.content{
-    height: 410px;
- 
-}
-.trai{
-    float: left;
-    width: 700px;
-    margin: 10px;
-    margin-right: 20px;
-}
-
-.phai{
-    float: left;
-    width: 260px;
-    margin: 20px;
-    padding-right: 10px;
-    
-}
-.phai p{
-    text-align: justify;
-}
-.link1{
-    text-decoration: none;
-    margin-left: 190px;
-}
-hr {
-    border-top: 2px dashed; 
-  }
-.nd1{
-    float: left;
-    width: 60%;
-}
-.nd2{
-    float: left;
-    width: 40%;
-}
-h3{
-    padding-top: 20px;
-    padding-bottom: 20px;
+.box{
+    justify-content: left;
 }
 p{
     padding-top: 10px;
     padding-bottom: 10px;
 }
-#title{
+.title{
     color: red;
     text-shadow: 0 2px 5px rgb(31, 116, 46);
     font-style: italic;
 }
 .phai img{
-    width: 800px;
+    width: 330px;
     margin-top: 20px;
     padding: 2px;
     border: 1px solid black;}
+
 .frm2 .feild1{
     display: flex;
     justify-content: space-between;
-    padding-top: 10px;
+    margin-left: -90px;
 }
 .frm2 .feild2{
     display: flex;
     justify-content: space-between;
-    padding-top: 10px;
+    margin-left: -90px;
 }
 .frm2 textarea,input[type='button']{
     margin-top: 10px;
@@ -177,8 +141,11 @@ footer{
     background-color: #294e79;
     height: 40px;
     width: 1050px;
+    top: 53px;
 }
 footer p{
     text-align: center;
 }
-
+hr {
+    border-top: 2px dashed; 
+  }
