--- a/16-22712771-LeQuochung/layout/layout1.html
+++ b/16-22712771-LeQuochung/layout/layout1.html
@@ -1,54 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>layout1</title>
-<style>
-
-.container {
-  width: 80%px;
-  height: 300px;
-  margin: 0 auto;
-    
+  <title>Form trên cùng một hàng</title>
+  <style>
+    form {
+  text-align: center; /* Căn giữa form */
 }
 
-header {
-  height: 30px;  
-  background-color: rgb(243, 213, 158);
-  text-align: center;
-  border: 1px solid black;
-  padding-top: 10px;
-  
+label, input {
+  display: inline-block;
+  margin: 10px; /* Khoảng cách giữa các phần tử */
 }
 
-section {
-  height: 240px;
-  background-color: rgb(243, 213, 158);
-  border-left: 1px solid black;
-  border-right: 1px solid black;
-  padding-left: 10px;
+input[type="submit"] {
+  width: 100px; /* Độ rộng nút submit */
 }
-
-footer {
-  background-color: rgb(243, 213, 158);
-  text-align: center;
-  border: 1px solid black;
-  height: 30px;
-}
-</style>
+  </style>
 </head>
 <body>
-<div class="container">
-  <header>
-    Header
-  </header>
-  <section>
-    Section 
-  </section>
-  <footer>
-    Footer
-  </footer>
-</div>
+
+  <form>
+    <label for="fname">Họ và tên:</label>
+    <input type="text" id="fname" name="fname"><br><br>
+    <label for="lname">Email:</label>
+    <input type="email" id="lname" name="lname"><br><br>
+    <input type="submit" value="Submit">
+  </form>   
+
+
 </body>
 </html>
